--- a/DosPaes/appsettings.json
+++ b/DosPaes/appsettings.json
@@ -1,8 +1,13 @@
 {
+  "Jwt": {
+    "SecretKey": "KqcL7s998JrfFHRP",
+    "Issuer": "https://localhost:44379/",
+    "Audience": "https://localhost:44379/"
+  },
   "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-"AllowedHosts": "*"
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
